# SIRIUS

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  INTERNALS.md  LICENSE-3RD-PARTY.md  README.md  github_deploy_key.enc
.travis/: build_install_sirius.sh  create_cmake_project.sh  deploy.sh  on_success.sh  run_tests.sh
bindings/: CMakeLists.txt  setup.cfg.in  setup.py  siriuspy.cpp  test.py
cmake/: BuildType.cmake  ExtractVersion.cmake  FindFFTW3.cmake  FindSIRIUS.cmake
doctrees/: Sirius.doctree  common.doctree  environment.pickle  theoretical_basis.doctree  user_manual_caption.doctree
doxy_html/: INTERNALS_8md.html  README_8md.html  annotated.html  classes.html  classsirius_1_1Exception.html  classsirius_1_1Filter-members.html  classsirius_1_1Filter.html  classsirius_1_1FrequencyResamplerFactory-members.html  classsirius_1_1FrequencyResamplerFactory.html  classsirius_1_1IFrequencyResampler-members.html  classsirius_1_1IFrequencyResampler.html  classsirius_1_1Image-members.html  classsirius_1_1Image.html  classsirius_1_1ImageStreamer-members.html  classsirius_1_1ImageStreamer.html  classsirius_1_1ZoomRatio-members.html  classsirius_1_1ZoomRatio.html  classsirius_1_1fftw_1_1Exception-members.html  classsirius_1_1fftw_1_1Exception.html  classsirius_1_1fftw_1_1Fftw-members.html  classsirius_1_1fftw_1_1Fftw.html  classsirius_1_1gdal_1_1Exception-members.html  classsirius_1_1gdal_1_1Exception.html  classsirius_1_1gdal_1_1InputStream-members.html  classsirius_1_1gdal_1_1InputStream.html  classsirius_1_1gdal_1_1ResampledOutputStream-members.html  classsirius_1_1gdal_1_1ResampledOutputStream.html  classsirius_1_1resampler_1_1FrequencyResampler-members.html  classsirius_1_1resampler_1_1FrequencyResampler.html  classsirius_1_1resampler_1_1ImageDecompositionPeriodicSmoothPolicy-members.html  classsirius_1_1resampler_1_1ImageDecompositionPeriodicSmoothPolicy.html  classsirius_1_1resampler_1_1ImageDecompositionRegularPolicy-members.html  classsirius_1_1resampler_1_1ImageDecompositionRegularPolicy.html  classsirius_1_1resampler_1_1PeriodizationZoomStrategy-members.html  classsirius_1_1resampler_1_1PeriodizationZoomStrategy.html  classsirius_1_1resampler_1_1ZeroPaddingZoomStrategy-members.html  classsirius_1_1resampler_1_1ZeroPaddingZoomStrategy.html  classsirius_1_1utils_1_1ConcurrentQueue-members.html  classsirius_1_1utils_1_1ConcurrentQueue.html  classsirius_1_1utils_1_1LRUCache-members.html  (+121 more)
html/: .buildinfo  Sirius.html  common.html  genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js  theoretical_basis.html  user_manual_caption.html
python/: CMakeLists.txt  siriuspy.cc  test_resampler.py
src/: CMakeLists.txt  main.cc
src/cmake/: Config.cmake.in
src/sirius/: config.h.in  exception.h  filter.cc  filter.h  frequency_resampler_factory.cc  frequency_resampler_factory.h  frequency_rotator_factory.cc  frequency_rotator_factory.h  frequency_translator_factory.cc  frequency_translator_factory.h  frequency_zoom_factory.cc  frequency_zoom_factory.h  i_frequency_resampler.h  i_frequency_rotator.h  i_frequency_translator.h  i_frequency_zoom.h  image.cc  image.h  image_streamer.cc  image_streamer.h  sirius.h.in  types.cc  types.h
src/sirius/fftw/: exception.cc  exception.h  fftw.cc  fftw.h  types.h  wrapper.cc  wrapper.h
src/sirius/gdal/: debug.cc  debug.h  error_code.cc  error_code.h  exception.cc  exception.h  i_input_stream.h  i_output_stream.h  image_streamer.h  image_streamer.txx  input_stream.cc  input_stream.h  output_stream.cc  output_stream.h  output_zoomed_stream.cc  output_zoomed_stream.h  resampled_output_stream.cc  resampled_output_stream.h  stream_block.h  types.h  wrapper.cc  wrapper.h
src/sirius/gdal/resampling/: input_stream.cc  input_stream.h  output_stream.cc  output_stream.h
src/sirius/gdal/rotation/: input_stream.cc  input_stream.h  output_stream.cc  output_stream.h
src/sirius/gdal/translation/: input_stream.cc  input_stream.h  output_stream.cc  output_stream.h
src/sirius/image_decomposition/: periodic_smooth_policy.h  periodic_smooth_policy.txx  policies.h  regular_policy.h  regular_policy.txx
src/sirius/resampler/: frequency_resampler.h  frequency_resampler.txx
src/sirius/resampler/image_decomposition/: periodic_smooth_policy.h  periodic_smooth_policy.txx  regular_policy.h  regular_policy.txx
src/sirius/resampler/zoom_strategy/: periodization_strategy.cc  periodization_strategy.h  zero_padding_strategy.cc  zero_padding_strategy.h
src/sirius/resampling/: frequency_resampler.h  frequency_resampler.txx  interpolator.cc  interpolator.h  parameters.h
src/sirius/resampling/upsampling/: periodization_upsampling.cc  periodization_upsampling.h  zero_padding_upsampling.cc  zero_padding_upsampling.h
src/sirius/rotation/: frequency_rotator.h  interpolator.cc  interpolator.h  parameters.h  processor.cc  processor.h  utils.cc  utils.h
src/sirius/translation/: frequency_translation.cc  frequency_translation.h  frequency_translator.h  frequency_translator.txx  interpolator.cc  interpolator.h  parameters.h  processor.cc  processor.h  utils.cc  utils.h
src/sirius/utils/: concurrent_queue.h  concurrent_queue.txx  concurrent_queue_error_code.cc  concurrent_queue_error_code.h  debug.cc  debug.h  gsl.h  log.cc  log.h  lru_cache.h  numeric.cc  numeric.h  scope_cleaner.h
src/sirius/zoom/: frequency_zoom.h  frequency_zoom.txx
src/sirius/zoom/image_decomposition/: periodic_smooth_policy.h  periodic_smooth_policy.txx  regular_policy.h  regular_policy.txx
src/sirius/zoom/zoom_strategy/: periodization_strategy.cc  periodization_strategy.h  zero_padding_strategy.cc  zero_padding_strategy.h
tests/: CMakeLists.txt  catch_main.cc  concurrent_queue_tests.cc  filter_tests.cc  frequency_resampler_tests.cc  frequency_rotator_tests.cc  frequency_translator_tests.cc  frequency_zoom_tests.cc  functional_tests.cc  image_tests.cc  streamer_tests.cc  test_data.h.in  types_tests.cc  utils.cc  utils.h  utils_tests.cc
tests/find-package-test/: CMakeLists.txt  basic_sirius_test.cc
(+651 files in other folders)
